<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/productNameInputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:hint="@string/product_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/productQuantityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/product_quantity_hint"
        android:inputType="number"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/guideline_h_center"
        app:layout_constraintStart_toEndOf="@+id/text_quantity_id"
        app:layout_constraintTop_toBottomOf="@+id/productNameInputText"/>

    <EditText
        android:id="@+id/productPriceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/product_price_hint"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_price_id"
        app:layout_constraintTop_toBottomOf="@+id/productNameInputText"/>

    <TextView
        android:id="@+id/text_quantity_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/productQuantityInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameInputText"/>

    <TextView
        android:id="@+id/text_price_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/price_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/productPriceInput"
        app:layout_constraintStart_toEndOf="@+id/guideline_h_center"
        app:layout_constraintStart_toStartOf="@+id/guideline_h_center"
        app:layout_constraintTop_toBottomOf="@+id/productNameInputText"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>